--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="color-scheme" content="dark light">
+    <link rel="stylesheet" href="/styles/globals.css">
+    <link rel="stylesheet" href="/fonts/fonts.css">
+    <link rel="stylesheet" href="/styles/variables.css">
+    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="./styles/dark.css">
+    <link rel="stylesheet" href="./styles/light.css"> 
     <title>Сложно сосредоточиться</title>
   </head>
   <body class="page">
@@ -33,8 +40,65 @@
             </button>
           </li>
         </ul>
+        <h1 class="header__theme-menu-title">no focus</h1>
+        <p class="header__theme-menu-text title-decor">Что делать, когда не можешь делать ничего Или почему нам так сложно сконцентрироваться, особенно когда очень надо</p>
+        <span class="header__theme-menu-rec" aria-hidden="true">rec</span>
+        <div class=""></div>
       </nav>
     </header>
+    <main class="main-page">
+      <section class="question">
+        <h2 class="main-title">Почему сосредоточиться так сложно</h2>
+        <div class="question__info">
+          <h2 class="main-subtitle title-decor">Многозадачность</h2>
+          <p class="main-text">Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи
+            <a class="text-link" href="https://dana.org/article/multicosts-of-multitasking/">выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.</p>
+          <h2 class="main-title title-decor">Дофамин</h2>
+          <p class="main-text">С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться замешана и полная противоположность стрессу — дофамин. Это вещество участвует в системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на что-то более «приятное» для мозгов. Например, смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы чувствуем удовольствие. Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.</p>
+        </div>
+      </section>
+      <section class="answer">
+        <h2 class="main-title width-limit">Что снижает концентрацию внимания?</h2>
+        <div class="answer__info">
+          <h2 class="title-decor">Многозадачность</h2>
+          <p class="main-text">Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. Например, читать новости вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.</p>
+          <h2 class="title-decor">Еда</h2>
+          <p class="main-text">«Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и помогают ему лучше работать. Но уходит эта энергия также быстро, как и приходит. А мы в результате попадаем на «углеводные качели»: как только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше быстрых углеводов.</p>
+          <h2 class="title-decor">Гаджеты</h2>
+          <p class="main-text">Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными утятами. В результате мозг пытается переключиться с одной задачи на другую — и просто не может. А чтобы вернуться к состоянию полной концентрации, человеку в среднем нужно 20 минут. Вот и получается, что чем больше времени мы проводим в гаджетах, тем больше времени затем нужно, чтобы вернуться к работе.</p>
+        </div>
+      </section>
+      <section class="solution">
+        <h2 class="main-title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
+        <div class="solution__info">
+          <h2 class="title-decor">5 простых (на самом деле не очень) советов</h2>
+          <h2 class="title-decor">Представьте небо и облака</h2>
+          <p class="main-text">Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий момент, а не волноваться о потенциальных проблемах из будущего.</p>
+          <h2 class="title-decor">Включите музыку</h2>
+          <p class="main-text">Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист в «белым шумом» или нейромузыкой.</p>
+          <h2 class="title-decor">Прогуляйтесь</h2>
+          <p class="main-text">Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
+            <a class="text-link" href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328">показал</a>, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.</p>
+          <h2 class="title-decor">Хорошо ешьте</h2>
+          <p class="main-text">Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.</p>
+          <h2 class="title-decor">Читайте</h2>
+          <p class="main-text">Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто тренирует направленное внимание.</p>
+        </div>
+      </section>
+      <section class="images">
+        <h2 class="title-decor">А можно в картинках?</h2>
+        <div class="images__info">
+          <img class="img first" src="/images/sunset.png" alt="" loading="lazy"/>
+          <img class="img second" src="/images/ice-cream.png" alt="" loading="lazy"/>
+          <img class="img third" src="/images/tape.png" alt="" loading="lazy"/>
+          <img class="img foor" src="/images/books.png" alt="" loading="lazy"/>
+          <img class="img five" src="/images/street.png" alt="" loading="lazy"/>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <h2 class="footer-title">focus</h2>
+    </footer>
     <script src="./scripts/script.js"></script>
   </body>
 </html>
