--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="color-scheme" content="dark light">
+    <link rel="icon" href="/images/favicon.ico" sizes="any" />
+    <link rel="icon" href="/images/favicon.svg" type="image/svg+xml" />
     <link rel="stylesheet" href="/styles/globals.css">
     <link rel="stylesheet" href="/fonts/fonts.css">
     <link rel="stylesheet" href="/styles/variables.css">
@@ -88,11 +90,11 @@
       <section class="images">
         <h2 class="title-decor">А можно в картинках?</h2>
         <div class="images__info">
-          <img class="img first" src="/images/sunset.png" alt="" loading="lazy"/>
-          <img class="img second" src="/images/ice-cream.png" alt="" loading="lazy"/>
-          <img class="img third" src="/images/tape.png" alt="" loading="lazy"/>
-          <img class="img foor" src="/images/books.png" alt="" loading="lazy"/>
-          <img class="img five" src="/images/street.png" alt="" loading="lazy"/>
+          <img class="img first" src="/images/sunset.png" alt="Закат" loading="lazy"/>
+          <img class="img second" src="/images/ice-cream.png" alt="Мороженое" loading="lazy"/>
+          <img class="img third" src="/images/tape.png" alt="MP3 плеер" loading="lazy"/>
+          <img class="img foor" src="/images/books.png" alt="Книги" loading="lazy"/>
+          <img class="img five" src="/images/street.png" alt="Улицы" loading="lazy"/>
         </div>
       </section>
     </main>
